# weldlayer

./: .gitignore  Cargo.toml  README.md
apps/desktop-tauri/: README.md  index.html  package-lock.json  package.json  vite.config.ts
apps/desktop-tauri/src/: App.tsx  examples.ts  main.tsx  styles.css
apps/desktop-tauri/src-tauri/: Cargo.toml  tauri.conf.json
apps/desktop-tauri/src-tauri/src/: commands.rs  main.rs
crates/app-service/: Cargo.toml  README.md
crates/app-service/src/: lib.rs
crates/contracts/: Cargo.toml
crates/contracts/src/: lib.rs  matching.rs  parser.rs
crates/core-engine/: Cargo.toml
crates/core-engine/src/: lib.rs
crates/core-store/: Cargo.toml
crates/core-store/src/: lib.rs
crates/engine-cli/: Cargo.toml  README.md
crates/engine-cli/examples/: match_request.json  parse_request.json
docs/: README.md
docs/engineering/: 16-Backend-Scaffold-v0.md  17-SQLite-Store-v0.md  18-Engine-CLI-v0.md  19-App-Service-v0.md  20-Tauri-Command-Scaffold-v0.md
docs/phase0/: 01-PRD-v1.md  02-User-Flow.md  03-Data-Dictionary.md  04-Rule-Engine-Spec.md  05-Matching-Explain-Spec.md  06-Template-Mapping-Spec.md  07-AI-Scope-v1.md  08-License-Spec.md  09-NFR.md  10-Acceptance-v1.md  11-AI-Candidate-Detection-Spec.md
docs/planning/: 11-Implementation-Roadmap.md  12-UI-First-Schedule.md
docs/product/: 15-Requirement-Decision-Log.md
docs/ui/: 13-UI-Page-Spec.md  14-UI-Navigation-Wireframe.md
prototype/: README.md  app.js  index.html  styles.css
sidecar/parser-python/: README.md  parser_sidecar.py  sample_request.json
(+9 files in other folders)
