[package]
name = "core-store"
version = "0.1.0"
edition.workspace = true
license.workspace = true
authors.workspace = true

[dependencies]
contracts = { path = "../contracts" }
rusqlite = { version = "0.37", features = ["bundled"] }
serde_json = { workspace = true }
thiserror = { workspace = true }
