[package]
name = "desktop-tauri-shell"
version = "0.1.0"
edition = "2024"

[workspace]

[dependencies]
app-service = { path = "../../../crates/app-service" }
contracts = { path = "../../../crates/contracts" }
base64 = "0.22"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
rfd = "0.15"
tauri = { version = "2", features = [] }

[build-dependencies]
tauri-build = { version = "2", features = [] }
